@@ -1,16 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-DIST ScriptTest-1.0.3.tar.gz 11302 RMD160 b7a94dbd0eeba5d8bd568faee2e6400ed97dd42d SHA1 7f7b56289fdc2e3b0c300a358f3a38d29ee0078e SHA256 0caf1bb0e557fac4b73b70a3f2db3d33eb0164190206ec58d617a5b2bb529487
 DIST ScriptTest-1.0.4.tar.gz 12015 RMD160 5531ed7d88dcc7c107db1edbd906f21d579b5020 SHA1 ed53307e065258e13c266ac8855c28e0184be926 SHA256 695fb8201aa3d9ea6af51fb00a8dcf9cc29fbb862f3f999faeddc2705c5f4714
-EBUILD scripttest-1.0.3.ebuild 497 RMD160 8f0d04abcbbe96f038c2b0c6f5d580f1976aba1b SHA1 5a01f3764e7b41a32d734ab859877faa0073743a SHA256 1f98281a29fc711485dc2b2ff32a7eb87199fb54798f88cb9237090364bde547
-EBUILD scripttest-1.0.4.ebuild 502 RMD160 911388760d2469cc66631183714a9d6364df5d9e SHA1 e6c2edd9e72d4d8f0bed9882260b449a7ea29513 SHA256 83bee23263c795161fe910170aa8c1c0b4746fb5677b9bba87f717cb4bb201e0
-MISC ChangeLog 753 RMD160 0bc75a0b40b672244abb6828343941ebbde782fe SHA1 99e1ce44da389627054f09f3ec1811040c0f38c8 SHA256 deab116bbd5fb144baf1513e9e3bf5d52b5c0bfad5821807fef420c04b5914a0
+EBUILD scripttest-1.0.4.ebuild 501 RMD160 7524725eb09aa4eab8a32b4cd0f3ed1dff9ad04a SHA1 b0d3655c67f09db5a6665635d647e78f0c8b27ad SHA256 297b789d824cfcc6956f0391f3d0fa8fe8c699b9bd32e8cbd5e9256c23c9e630
+MISC ChangeLog 869 RMD160 75b9d848874e7755817e59b9e6cbc469c9b16e1c SHA1 ff0e3787ef1ed2655b2f3809a0921b4bdaa7f4eb SHA256 cc3653c30a7eea03f0551fdad4b68cdaf7b0c1564e003695b7a4d1d28d01930a
 MISC metadata.xml 735 RMD160 c1403a4b962fda8da806b64586aae21edb812b13 SHA1 8b83408204af46b967bb600599b626795d599988 SHA256 1d473bcede227f5858f21648dc38b4a4f1fe248404ef3b1498943ebb4a9a1912
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.15 (GNU/Linux)
 
-iEYEARECAAYFAkwxozQACgkQzJrj3cAXR0mkJgCeOcfYNnKjeJ+zxRcjET+jKSwW
-Q68Anj+kcuDV43oH2F07pShSCWd1ZBvG
-=tTjS
+iEYEARECAAYFAkwyES0ACgkQzJrj3cAXR0lGzQCeMTqCMdtrP8AFnrMPIIWRdrnO
+gKcAoKhAMmWWPSK+TwjMXe6iG1tdNkt9
+=D8uU
 -----END PGP SIGNATURE-----
