@@ -17,7 +17,7 @@ HOMEPAGE="http://pythonpaste.org/scripttest/"
 
 LICENSE="MIT"
 SLOT="0"
-KEYWORDS="amd64 ~x86"
+KEYWORDS="amd64 x86"
 IUSE=""
 
 DEPEND=""
