@@ -1,22 +1,0 @@
->=app-admin/eselect-python-20091230 =dev-lang/python-2* test? ( dev-python/nose )
->=app-admin/eselect-python-20091230 =dev-lang/python-2*
-0
-http://pypi.python.org/packages/source/S/ScriptTest/ScriptTest-1.0.3.tar.gz
-
-http://pythonpaste.org/scripttest/
-MIT
-Helper to test command-line scripts
-amd64 x86
-distutils eutils jnrowe-pypi multilib portability python toolchain-funcs
-test
-
-
-
-2
-
-compile install postinst postrm prepare test
-
-
-
-
-
