@@ -6,7 +6,7 @@ http://pypi.python.org/packages/source/S/ScriptTest/ScriptTest-1.0.4.tar.gz
 http://pythonpaste.org/scripttest/
 MIT
 Helper to test command-line scripts
-amd64 ~x86
+amd64 x86
 distutils eutils jnrowe-pypi multilib portability python toolchain-funcs
 test
 
