@@ -1,4 +1,3 @@
-REM 2010-07-02 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 dev-python/scripttest-1.0.4 %a
 REM 2010-07-02 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 dev-util/ccontrol-1.0 %a
 REM 2010-07-02 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 dev-python/dexml-0.3.6 %a
 REM 2010-07-02 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 dev-python/tweepy-1.7.1 %a
