@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  05 Jul 2010; James Rowe <jnrowe@gmail.com> -scripttest-1.0.3.ebuild,
+  scripttest-1.0.4.ebuild:
+  Keyworded x86.
+
   05 Jul 2010; James Rowe <jnrowe@gmail.com> scripttest-1.0.4.ebuild:
   Keyworded amd64.
 
